review of _common.scss, _sales.scss and ui-pages

--- a/src/pug/article__item.pug
+++ b/src/pug/article__item.pug
@@ -14,7 +14,7 @@ block wrapper
               a.pathway__link(href="#") Статьи
               a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
             section.content
-              .color-brand
+              .color-theme-brand
                 h1 Как самостоятельно заменить тормозную жидкость
               .content__date.mb-2 30 ноября 2021
               .section__picture.d-block.d-lg-none
@@ -26,7 +26,7 @@ block wrapper
     .section
       .section__wrapper.section__wrapper_px.mx-0
         .content
-          .color-brand.text-center
+          .color-theme-brand.text-center
             h2 Почему нужно менять тормозную жидкость вовремя
           .content__columns
             p Её состав даёт одно неприятное свойство: гигроскопичность. Проще говоря, жидкость активно впитывает влагу. Как следствие, она теряет свои основные свойства. У только что купленной жидкости для тормозов точка кипения находится на отметке в 260-265 градусов. Но стоит ей разбавиться водой хотя бы на 3-4 процента, как она начнёт закипать уже при 160 градусах.
@@ -41,7 +41,7 @@ block wrapper
     .section.mb-4
       .section__wrapper.section__wrapper_px.mx-0
         .content
-          .color-brand.text-center
+          .color-theme-brand.text-center
             h2 Как заменить тормозную жидкость без прокачки
           .content__columns
             p Самый простой способ давно известен даже начинающим автомобилистам. Но так называемая «прокачка» тормозов требует либо помощника, либо постоянной беготни от кабины до каждого отдельного колеса. Можно самостоятельно заменить тормозную жидкость методом проливания.
@@ -50,7 +50,7 @@ block wrapper
             p Теперь откройте бачок тормозной жидкости и шприцем или клизмой откачайте как можно больше старой. После чего медленно заливайте новую. Всего вам потребуется примерно литр. Оценивайте объём, вытекающий в каждую ёмкость. После того, как в передние сольётся примерно по 200 мл, а в задние — по 250-300 мл, замену можно считать завершённой. Аккуратно затяните штуцеры и доведите уровень тормозной жидкости в бачке до рекомендуемого. Учтите, что ёмкости будут наполняться неравномерно, поэтому вам придётся делать паузы, чтобы затягивать штуцеры вовремя.
 
     .text-center.mb-5
-      a.readmore.readmore_arrow-down.color-brand(href="#")
+      a.readmore.readmore_arrow-down.color-theme-brand(href="#")
         span.text-lg Другие статьи
 
     .section.mb-3
