--- a/src/pug/article__item_video.pug
+++ b/src/pug/article__item_video.pug
@@ -12,7 +12,7 @@ block articles__section
           a.pathway__link(href="#") Статьи
           a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
         section.content
-          .color-brand
+          .color-theme-brand
             h1 Обзор на летние шины Pirelli P Zero от ДонШина
           .content__date.mb-2 30 ноября 2021
       .section__video
@@ -23,12 +23,12 @@ block articles__section
           .col-xl-8.col-lg-10.d-flex.flex-column.flex-sm-row.align-items-start.align-items-sm-center.justify-content-sm-between.px-lg-0.px-md-5.px-4
             nav.social.d-flex.flex-wrap.align-items-center.mb-4.mb-sm-0
               .social__title.mr-2 Поделиться:
-              a.social__item.color-brand.mr-2(href="#")
+              a.social__item.color-theme-brand.mr-2(href="#")
                 +icon('vk')
-              a.social__item.color-brand.mr-2(href="#")
+              a.social__item.color-theme-brand.mr-2(href="#")
                 +icon('instagram')
-              a.social__item.color-brand.mr-2(href="#")
+              a.social__item.color-theme-brand.mr-2(href="#")
                 +icon('youtube')
-              a.social__item.color-brand.mr-0(href="#")
+              a.social__item.color-theme-brand.mr-0(href="#")
                 +icon('facebook')
             a.readmore(href="#") Смотреть на нашем канале
