--- a/src/pug/articles__row.pug
+++ b/src/pug/articles__row.pug
@@ -40,7 +40,7 @@ block wrapper
               .media__intro.h5!= articles__item.intro
     .section.text-center.mb-5
       .section__wrapper.py-3
-        a.readmore.readmore_arrow-down.color-brand(href="#")
+        a.readmore.readmore_arrow-down.color-theme-brand(href="#")
           span.text-lg Показать еще
 
     .section.mb-3
