--- a/src/pug/base/callorder.pug
+++ b/src/pug/base/callorder.pug
@@ -1,6 +1,6 @@
 .section.text-center
   .section__wrapper.section__wrapper_px
-    .section__title.color-brand Оставьте заявку и наши менеджеры свяжутся с вами в
+    .section__title.color-theme-brand Оставьте заявку и наши менеджеры свяжутся с вами в
       br
       | ближайшее время
     .row
@@ -10,4 +10,4 @@
           label.form__label.form__label_title +7 (_ _ _) _ _ _-_ _-_ _
         button.btn.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
         .form__footer Нажимая “Подписаться” вы принимаете условия
-          a.color-brand(href="#") Политики конфиденциальности
+          a.color-theme-brand(href="#") Политики конфиденциальности
