--- a/src/pug/comparing.pug
+++ b/src/pug/comparing.pug
@@ -25,7 +25,7 @@ block wrapper
             span.form__label-title Показать только различия
         .col-xl-2.col-lg-3.col-md-4.col-3.d-flex.justify-content-end.mb-4
           button.btn.btn_nobg.h5.p-0(type="button")
-            svg.btn__icon.color-brand.mr-md-2
+            svg.btn__icon.color-theme-brand.mr-md-2
               use(xlink:href="#icon-trash")
             span.d-md-block.d-none Очистить список
       include category/comparing.pug
@@ -44,7 +44,7 @@ block wrapper
             span.form__label-title Показать только различия
         .col-xl-2.col-lg-3.col-md-4.col-3.d-flex.justify-content-end.mb-4
           button.btn.btn_nobg.h5.p-0(type="button")
-            svg.btn__icon.color-brand.mr-md-2
+            svg.btn__icon.color-theme-brand.mr-md-2
               use(xlink:href="#icon-trash")
             span.d-md-block.d-none Очистить список
       include category/comparing.pug
