--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -14,7 +14,7 @@ block wrapper
       .col-xl-3.col-lg-4.order-2.order-lg-1.mb-5.mb-lg-4
         .accordion.active.mb-2
           .accordion__header.px-4
-            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-brand(type="button") ДонШина Ростов
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-brand(type="button") ДонШина Ростов
           .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
@@ -43,7 +43,7 @@ block wrapper
                   | Вс. – Выходной
         .accordion.mb-2
           .accordion__header.px-4
-            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-brand(type="button") ДонШина Таганрог
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-brand(type="button") ДонШина Таганрог
           .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
@@ -72,7 +72,7 @@ block wrapper
                   | Вс. – Выходной
         .accordion
           .accordion__header.px-4
-            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-brand(type="button") ДонШина Волгоград
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-brand(type="button") ДонШина Волгоград
           .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
@@ -105,7 +105,7 @@ block wrapper
 
     .section
       .section__wrapper.px-3.px-md-0
-        .section__title.text-center.color-brand Вы можете задать нам вопросы и мы ответим в ближайшее
+        .section__title.text-center.color-theme-brand Вы можете задать нам вопросы и мы ответим в ближайшее
           br
           | время
         form.form(action="#")
@@ -133,6 +133,6 @@ block wrapper
               .col-md-6 Нажимая “Подписаться” вы принимаете
                 br
                 | условия
-                a.color-brand(href="#") Политики конфиденциальности
+                a.color-theme-brand(href="#") Политики конфиденциальности
             .d-flex.justify-content-center.justify-content-lg-end.col-xl-2.col-lg-3.offset-lg-0.col-md-10.offset-md-1
               button.btn.text-uppercase.px-5(type="submit") отправить
