--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -354,7 +354,7 @@ block wrapper
                 .banner.overflow-hidden
                   +img('content/banners/banner-1.jpg','img-cover')
                   .banner__inner.d-flex.flex-column.align-items-center.justify-content-between.px-3.py-4
-                    .banner__title.banner__title_sm.h1.text-uppercase.font-weight-bold.color-brand Запись на шиномонтаж онлайн
+                    .banner__title.banner__title_sm.h1.text-uppercase.font-weight-bold.color-theme-brand Запись на шиномонтаж онлайн
                     a.btn.text-uppercase(href="#") Записаться
 
         .tabs.mb-5
@@ -446,7 +446,7 @@ block wrapper
               .banner.overflow-hidden
                 img.img-cover(src="../img/content/banners/banner-2.jpg" alt="" title="")
                 .banner__inner.banner__inner_offset.d-flex.flex-column.align-items-center.justify-content-between
-                  .banner__title.h1.font-weight-bold.color-white Подбор запчастей по VIN-коду
+                  .banner__title.h1.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
                   a.btn.text-uppercase(href="#") Подобрать
 
         .section
@@ -457,11 +457,11 @@ block wrapper
                         .row.flex-grow-1
                             .col-xl-6.col-lg-8.col-md-6.d-flex.flex-column.justify-content-around.h-100
                               .feature.mb-5.mb-lg-4
-                                .feature__value.font-weight-bold.color-brand 10
+                                .feature__value.font-weight-bold.color-theme-brand 10
                                   span.h1 лет
                                 .h4 на рынке продаж шин дисков и автотоваров.
                               .feature.mb-5.mb-lg-0
-                                .feature__value.font-weight-bold.color-brand &gt;2000
+                                .feature__value.font-weight-bold.color-theme-brand &gt;2000
                                 .h4 качественных товаров в каталоге сайта.
                     .col-lg-6.ml-lg-0.col-sm-10.offset-sm-1
                       .content
