--- a/src/pug/sales-item.pug
+++ b/src/pug/sales-item.pug
@@ -14,10 +14,10 @@ block wrapper
 
     .section
       .sale-item.sale-item_section
-        .sale-item__header.mb-4
+        .sale-item__header.d-block.overflow-hidden.mb-4
           +img('content/sales/sales-1.jpg','img-cover')
-          .sale-item__date До 30 ноября
-        .sale-item__body
+          .sale-item__date.date.h5.px-2 До 30 ноября
+        .sale-item__body.px-md-4.px-3.pb-3
           .content.content_expanded
             h3 Скидки на зимние шины Michelin
             ul.list-marked
