--- a/src/pug/tile/category.pug
+++ b/src/pug/tile/category.pug
@@ -9,7 +9,7 @@
           .icon-marker.mr-2
             svg.icon-fluid
               use(xlink:href="#icon-summer")
-        .card__params.flex-grow-1.text-right.color-brand.text-left.text-sm-right R16 / R17 / R18 / R19
+        .card__params.flex-grow-1.text-right.color-theme-brand.text-left.text-sm-right R16 / R17 / R18 / R19
       a.card__title.d-block(href="#") CORDIANT Sport 3
   .card__footer
     .card__meta.card__meta_row.justify-content-center.justify-content-sm-start
