--- a/src/pug/tile/row.pug
+++ b/src/pug/tile/row.pug
@@ -16,7 +16,7 @@
     .d-flex.align-items-center.justify-content-between
       .recalculate
         input.recalculate__field.d-none(type="number" name="count" value="4")
-        button.recalculate__btn.font-weight-bold.color-white.flex-grow-1.recalculate__btn_remove(type="button") -
-        .recalculate__value.d-flex.align-items-center.justify-content-center.color-white 4
-        button.recalculate__btn.font-weight-bold.color-white.flex-grow-1.recalculate__btn_add(type="button") +
+        button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
+        .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
+        button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
       a.btn.text-uppercase(href="#") В корзину
