--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -5,18 +5,6 @@ body {
   color: $color__text_default;
 }
 
-h1 {
-  @extend %title-default;
-}
-
-p {
-  @include h5;
-}
-
-a {
-  @extend %link-default;
-}
-
 input {
   outline: 0;
   outline: none;
@@ -33,283 +21,6 @@ button {
   }
 }
 
-.color-inherit {
-  @include color(inherit);
-}
-
-.color-white {
-  @include color(#fff);
-}
-
-.color-light {
-  @include color($color__light);
-}
-
-.color-brand {
-  @include color($color__brand);
-}
-
-.color-success {
-  @include color($color__success);
-}
-
-.color-disabled {
-  @include color($color__disabled);
-}
-
-.text-underline {
-  text-decoration: underline;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-.h1 {
-  @include h1;
-}
-
-.h2 {
-  @include h2;
-}
-
-.h3 {
-  @include h3;
-}
-
-.h4 {
-  @include h4;
-}
-
-.h5 {
-  @include h5;
-}
-
-.h6 {
-  @include h6;
-}
-
-.zi-1 {
-  @extend %zi-1;
-}
-
-.zi-2 {
-  @extend %zi-2;
-}
-
-.list-marked {
-  li {
-    margin: 0 0 1.5rem;
-    list-style-type: none !important;
-
-    &:before {
-      @include wh(8px);
-      @include inline-block;
-      content: '';
-      border-radius: 50%;
-      margin: .5rem .25rem 0 0;
-      background: $color__brand;
-    }
-  }
-}
-
-.icons {
-  display: none;
-}
-
-.icon-fluid {
-  @include wh(100%);
-  pointer-events: none;
-}
-
-.icon-marker {
-  @include fw(16px);
-  @include wh(16px);
-  pointer-events: none;
-}
-
-.img-cover {
-  @include wh(100%);
-  object-fit: cover;
-}
-
-.border-radius {
-  border-radius: .5rem;
-}
-
-.pointer-events-none {
-  pointer-events: none !important;
-}
-
-.w-auto {
-  width: auto !important;
-}
-
-.w-100 {
-  width: 100% !important;
-}
-
-.h-auto {
-  height: auto !important;
-}
-
-.h-100 {
-  height: 100% !important;
-}
-
-.h-100vh {
-  height: 100vh !important;
-}
-
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.invisible {
-  visibility: hidden;
-}
-
-.wrapper {
-  @extend %wrapper;
-
-  &.wrapper_column {
-  //&.container_column {
-    @extend %flex-column;
-    justify-content: space-between;
-
-    @include media-breakpoint-up(md) {
-      @include py(2.5rem);
-      min-height: 320px;
-    }
-
-    @include media-breakpoint-down(sm) {
-      @include py(1.5rem);
-    }
-  }
-}
-
-.bg-info {
-  background: $color__info !important;
-}
-
-.bg-light {
-  background: $color__light !important;
-}
-
-.bg-brand {
-  background: $color__brand !important;
-}
-
-.bg-success {
-  background: $color__success !important;
-}
-
-.bg-warning {
-  background: $color__warning !important;
-}
-
-.bg-disabled {
-  background: $color__disabled !important;
-}
-
-.logo {
-  @include inline-block;
-  @include fw(100px);
-  @include wh(100px,48px);
-}
-
-.toggler {
-  @extend %toggler-theme;
-
-  &.active {
-    @extend %toggler-theme-current;
-  }
-
-  &.toggler_success {
-    @extend %toggler-theme-success;
-  }
-}
-
-.icon-rounded {
-  @include wh(48px);
-  @include fw(48px);
-  padding: .5rem;
-  border-radius: 50%;
-}
-
-.readmore {
-  @extend %btn-default;
-  @include before;
-  padding: 0 1.625rem 0 0;
-  transition: all .3s ease;
-
-  &:hover,
-  &.current {
-    color: $color__brand;
-  }
-
-  &:before {
-    @include fw(20px);
-    @include wh(20px);
-    top: 50%;
-    right: 0;
-    margin: -.5rem 0 0;
-    border-radius: 50%;
-    background: $color__brand;
-    transition: all .3s ease;
-  }
-
-  &:after {
-    @include border(4px 0 4px 4px,rgba(0,0,0,0) rgba(0,0,0,0) rgba(0,0,0,0) #fff);
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: 7px;
-    margin: -.125rem 0 0;
-    transition: all .3s ease;
-  }
-
-  &.readmore_btn {
-    @include wh(22px,26px);
-    padding: 0;
-  }
-
-  &.readmore_arrow-down {
-    &:after {
-      @include border(4px 4px 0,#fff rgba(0,0,0,0) rgba(0,0,0,0));
-      right: 6px;
-      margin: 0;
-    }
-  }
-
-  .text-lg {
-    @include h4;
-  }
-}
-
-/* result */
-.result-item {
-  display: block;
-  text-align: center;
-}
-
-.result-item__pic {
-  display: block;
-  margin: 0 0 .75rem;
-}
-
-.result-item__title {
-  display: block;
-
-  @include media-breakpoint-up(lg) {
-    @include h5;
-  }
-
-  @include media-breakpoint-down(md) {
-    @include h6;
-  }
-}
-
-.date {
-  @extend %date-item;
+ul, ol {
+  @extend %list-default;
 }
