--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,9 +17,16 @@ $grid-gutter-width: 8px;
 @import 'base/mixins';
 @import 'base/extends';
 @import 'base/common';
+@import 'base/mixes';
+@import 'base/color';
+@import 'base/text';
+@import 'base/bg';
 
 /* tpl */
 @import 'tpl/btn';
+@import 'tpl/icon';
+@import 'tpl/logo';
+@import 'tpl/date';
 @import 'tpl/menu';
 @import 'tpl/tabs';
 @import 'tpl/form';
@@ -36,6 +43,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/section';
 @import 'tpl/content';
 @import 'tpl/feature';
+@import 'tpl/wrapper';
 @import 'tpl/pathway';
 @import 'tpl/topmenu';
 @import 'tpl/heading';
@@ -48,6 +56,9 @@ $grid-gutter-width: 8px;
 @import 'tpl/accordion';
 @import 'tpl/pagination';
 @import 'tpl/recalculate';
+@import 'tpl/readmore';
+@import 'tpl/toggler';
 @import 'tpl/review';
 @import 'tpl/params';
+@import 'tpl/result';
 @import 'tpl/footer';
