--- a/src/pug/base/subscribe.pug
+++ b/src/pug/base/subscribe.pug
@@ -1,6 +1,6 @@
 .section.text-center
   .section__wrapper.section__wrapper_px
-    .section__title.color-brand.mb-3 Узнайте о выгоде первым
+    .section__title.color-theme-brand.mb-3 Узнайте о выгоде первым
     .section__intro Подписывайтесь и получайте новости о скидках и акциях на свою почту.
     .row
       form.form.col-xl-4.offset-xl-4.col-md-6.offset-md-3.col-sm-8.offset-sm-2(action="#")
@@ -9,4 +9,4 @@
           label.form__label.form__label_title e-mail
         button.btn.text-uppercase.px-5.mb-3(type="submit") подписаться
         .form__footer Нажимая “Подписаться” вы принимаете условия
-          a.color-brand(href="#") Политики конфиденциальности
+          a.color-theme-brand(href="#") Политики конфиденциальности
