--- a/src/pug/carousel/comparing.pug
+++ b/src/pug/carousel/comparing.pug
@@ -12,7 +12,7 @@
         .icon-marker
           svg.icon-fluid
             use(xlink:href="#icon-spikes")
-      .card__params.flex-grow-1.text-right.color-brand 215 / 55  R16
+      .card__params.flex-grow-1.text-right.color-theme-brand 215 / 55  R16
   .card__body.d-flex.flex-column.justify-content-between.flex-grow-1.mb-4
     .card__intro
       a.card__title.d-block(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL
@@ -25,32 +25,32 @@
       .d-flex.align-items-center.justify-content-between
         .recalculate
           input.recalculate__field.d-none(type="number" name="count" value="4")
-          button.recalculate__btn.font-weight-bold.color-white.flex-grow-1.recalculate__btn_remove(type="button") -
-          .recalculate__value.d-flex.align-items-center.justify-content-center.color-white 4
-          button.recalculate__btn.font-weight-bold.color-white.flex-grow-1.recalculate__btn_add(type="button") +
+          button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
+          .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
+          button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
         a.btn.text-uppercase(href="#") В корзину
   .params.h6
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Ширина
+      .params__title.color-theme-disabled Ширина
       .params__value.h5 185
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Высота
+      .params__title.color-theme-disabled Высота
       .params__value.h5 55
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Диаметр
+      .params__title.color-theme-disabled Диаметр
       .params__value.h5 16
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Сезон
+      .params__title.color-theme-disabled Сезон
       .params__value.h5 Зима
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Производитель
+      .params__title.color-theme-disabled Производитель
       .params__value.h5 Yokohama
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Модель
+      .params__title.color-theme-disabled Модель
       .params__value.h5 Ice Guard IG55
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Типоразмер
+      .params__title.color-theme-disabled Типоразмер
       .params__value.h5 215 / 55  R16
     .params__row.d-flex.flex-column.justify-content-end
-      .params__title.color-disabled Индекс нагрузки
+      .params__title.color-theme-disabled Индекс нагрузки
       .params__value.h5 102 (850 кг)
