--- a/src/pug/personal-booking.pug
+++ b/src/pug/personal-booking.pug
@@ -8,7 +8,7 @@ block personal
     .section__title.text-center Текущие записи
     .section__wrapper.pb-0
       .section__body
-        .section__title.section__title_sm.color-brand Вы записаны на шиномонтаж
+        .section__title.section__title_sm.color-theme-brand Вы записаны на шиномонтаж
         .desclist
           .d-flex.align-items-center.mb-1
             .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Номер записи:
@@ -33,7 +33,7 @@ block personal
               span.contacts__item-title Напомнить в WhatsApp
           .col-xl-5.d-flex.justify-content-xl-end
             button.btn.btn_nobg.h5.p-0(type="button")
-              svg.btn__icon.color-brand.mr-2
+              svg.btn__icon.color-theme-brand.mr-2
                 use(xlink:href="#icon-trash")
               | Отменить запись
   .section
@@ -42,7 +42,7 @@ block personal
         .row.align-items-center
           .col-xl-8.col-sm-6
             button.btn.btn_nobg.h5.p-0(type="button")
-              svg.btn__icon.color-brand.mr-2
+              svg.btn__icon.color-theme-brand.mr-2
                 use(xlink:href="#icon-tool")
               | Записаться на услугу
           .col-xl-4.col-sm-6
