--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -8,13 +8,13 @@ block personal
     .section__title.text-center #{title}
     .section__wrapper.pb-0
       .section__body.pb-0
-        .section__title.section__title_sm.color-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
+        .section__title.section__title_sm.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
         a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
         a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
         a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
       .section__footer
         .row.align-items-center
           .col-xl-7
-            .h6.color-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
+            .h6.color-theme-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
           .col-xl-5.d-flex.justify-content-xl-end
             button.btn.text-uppercase(type="button") Оформить заказ
